--- a/.github/workflows/test-secrets.yml
+++ b/.github/workflows/test-secrets.yml
@@ -16,6 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: echo -n ${{ PYPI_TOKEN }} | sha256sum
+      run: echo -n ${{ secrets.PYPI_TOKEN }} | sha256sum
       
       
